--- a/src/contact.html
+++ b/src/contact.html
@@ -66,7 +66,7 @@
 
       <div class="modal-body">
         <div class="modal__content">
-          <h2 class="logo"><img src="assets/images/award.png" class="img-fluid"> Medpill</h2>
+          <h2 class="logo"><img src="assets/images/award.png" class="img-fluid"> Health Hub</h2>
           <!-- if logo is image enable this   
           <h2 class="logo">
             <img src="image-path" alt="Your logo" title="Your logo" style="height:35px;" />
